# apertium

apertium/: Makefile.am  autogen.sh  configure.ac
apertium-br-fr/: apertium-br-fr.br-fr.dix  apertium-br-fr.br.dix  apertium-br-fr.fr.metadix
apertium-spa-ita/: apertium-spa-ita.ita-spa.t1x  apertium-spa-ita.spa-ita.dix  apertium-spa-ita.spa-ita.t1x  configure.ac  modes.xml
apertium-swe-dan/: apertium-swe-dan.dan-swe.lrx  apertium-swe-dan.dan-swe.t1x  apertium-swe-dan.swe-dan.dix  apertium-swe-dan.swe-dan.lrx  apertium-swe-dan.swe-dan.t1x  modes.xml
apertium-swe-dan/t/: latest-pending.results  latest-regression.results
apertium-swe-nor/: Makefile.am  apertium-swe-nor.nno-swe.lrx  apertium-swe-nor.nob-swe.lrx  apertium-swe-nor.nor-swe.t1x  apertium-swe-nor.nor-swe.t2x  apertium-swe-nor.swe-nno.lrx  apertium-swe-nor.swe-nno.t1x  apertium-swe-nor.swe-nno.t2x  apertium-swe-nor.swe-nno.t3x  apertium-swe-nor.swe-nob.lrx  apertium-swe-nor.swe-nob.t1x  apertium-swe-nor.swe-nob.t2x  apertium-swe-nor.swe-nor.dix  configure.ac
apertium-swe-nor/t/: latest-pending.results  latest-regression.results
apertium-tools/emacs/: init-apertium.el
apertium-tools/wiki-tools/: bot.py
apertium-viewer/: AUTHORS  README  publish.sh
apertium-viewer/nbproject/: project.xml
apertium/apertium/: apertium_gen_wlist_lextor_translation.cc  apertium_interchunk.cc  apertium_lextor.cc  apertium_lextor_eval.cc  apertium_postchunk.cc  apertium_pretransfer.cc  apertium_tagger.cc  apertium_tagger.h  apertium_tagger_apply_new_rules.cc  apertium_tagger_readwords.cc  apertium_tmxbuild.cc  (+3 more)
(+8 files in other folders)
